# gyro-recorder

./: .gitmodules  CMakeLists.txt
src/: main.cpp
